# SoundCloudService

./: .env  Cargo.toml
postgreSQL/: docker-compose.yml
postgreSQL/db/: Dockerfile
postgreSQL/db/init/: seed.sql
src/: main.rs  own_api_domain.rs  postgres_service.rs  routs.rs  soundcloud_api.rs
